--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -1,9 +1,9 @@
-.spc__header {
+.gpt3__header {
     display: flex;
     flex-direction: row;
 }
 
-.spc__header-content {
+.gpt3__header-content {
     flex: 1;
     display: flex;
     justify-content: center;
@@ -13,7 +13,7 @@
     margin-right: 5rem;
 }
 
-.spc__header-content h1 {
+.gpt3__header-content h1 {
     font-family: var(--font-family);
     font-weight: 800;
     font-size: 62px;
@@ -21,7 +21,7 @@
     letter-spacing: -0.04em;
 }
 
-.spc__header-content p {
+.gpt3__header-content p {
     font-family: var(--font-family);
     font-weight: 400;
     font-size: 20px;
@@ -31,7 +31,7 @@
     margin-top: 1.5rem;
 }
 
-.spc__header-content__input {
+.gpt3__header-content__input {
     width: 100%;
     margin: 2rem 0 1rem;
 
@@ -39,7 +39,7 @@
     flex-direction: row;
 }
 
-.spc__header-content__input input {
+.gpt3__header-content__input input {
     flex: 2;
     width: 100%;
     min-height: 50px;
@@ -57,7 +57,7 @@
     border-bottom-left-radius: 5px;
 }
 
-.spc__header-content__input button {
+.gpt3__header-content__input button {
     flex: 0.6;
     width: 100%;
     min-height: 50px;
@@ -76,92 +76,67 @@
     border-bottom-right-radius: 5px;
 }
 
-.spc__header-content__people {
-    width: 100%;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-direction: row;
 
-    margin-top: 2rem;
-}
-
-.spc__header-content__people img {
+.gpt3__header-content__people img {
     width: 181.79px;
     height: 38px;
 }
 
-.spc__header-content__people p {
-    margin: 0 0 0 1rem;
-    font-family: var(--font-family);
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 38px;
-    color: #fff;
-    text-align: center;
-}
 
-.spc__header-image {
+.gpt3__header-image {
     flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.spc__header-image img {
+.gpt3__header-image img {
     width: 100%;
     height: 100%;
 }
 
 @media screen and (max-width: 1050px) {
-    .spc__header {
+    .gpt3__header {
         flex-direction: column;
     }
 
-    .spc__header-content {
+    .gpt3__header-content {
         margin: 0 0 3rem;
     }
 }
 
 @media screen and (max-width: 650px) {
-    .spc__header-content h1 {
+    .gpt3__header-content h1 {
         font-size: 48px;
         line-height: 60px;
     }
 
-    .spc__header-content p {
+    .gpt3__header-content p {
         font-size: 16px;
         line-height: 24px;
     }
     
-    .spc__header-content__people {
-        flex-direction: column;
-    }
 
-    .spc__header-content__people p {
-        margin: 0;
-    }
-
-    .spc__header-content__input input,
-    .spc__header-content__input button {
+    .gpt3__header-content__input input,
+    .gpt3__header-content__input button {
         font-size: 16px;
         line-height: 24px;
     }
 }
 
 @media screen and (max-width: 490px) {
-    .spc__header-content h1 {
+    .gpt3__header-content h1 {
         font-size: 36px;
         line-height: 48px;
     }
 
-    .spc__header-content p {
+    .gpt3__header-content p {
         font-size: 14px;
         line-height: 24px;
     }
 
-    .spc__header-content__input input,
-    .spc__header-content__input button {
+    .gpt3__header-content__input input,
+    .gpt3__header-content__input button {
         font-size: 12px;
         line-height: 16px;
     }
