--- a/src/containers/whatGPT3/whatGPT3.css
+++ b/src/containers/whatGPT3/whatGPT3.css
@@ -1,28 +1,56 @@
+.about{
+    
+
+
+    display: flex;
+}
 .gpt3__whatgpt3 {
     display: flex;
     flex-direction: column;
+    margin-left: 0;
 
     padding: 2rem;
     background: var(--color-footer);
 
     /* ff 3.6+ */
-    background:-moz-radial-gradient(circle at 30% -100%, #042c54 25%, rgba(4, 44, 84, 1) 85%, rgba(27, 120, 222, 1) 100%);
+    background:radial-gradient(circle at 30% -100%, rgb(177, 24, 24) -1%, rgb(24, 4, 4) -50%,  rgb(0, 0, 0) 90%);
 
     /* safari 5.1+,chrome 10+ */
-    background:-webkit-radial-gradient(circle at 30% -100%, #042c54 25%, rgba(4, 44, 84, 1) 85%, rgba(27, 120, 222, 1) 100%);
+    background:radial-gradient(circle at 30% -100%, rgb(177, 24, 24) -1%, rgb(24, 4, 4) -50%,  rgb(0, 0, 0) 90%);
 
     /* opera 11.10+ */
-    background:-o-radial-gradient(circle at 30% -100%, #042c54 25%, rgba(4, 44, 84, 1) 85%, rgba(27, 120, 222, 1) 100%);
+    background:radial-gradient(circle at 30% -100%, rgb(177, 24, 24) -1%, rgb(24, 4, 4) -50%,  rgb(0, 0, 0) 90%);
 
     /* ie 10+ */
-    background:-ms-radial-gradient(circle at 30% -100%, #042c54 25%, rgba(4, 44, 84, 1) 85%, rgba(27, 120, 222, 1) 100%);
+    background:radial-gradient(circle at 30% -100%, rgb(177, 24, 24) -1%, rgb(24, 4, 4) -50%,  rgb(0, 0, 0) 90%);
 
     /* global 92%+ browsers support */
-    background:radial-gradient(circle at 30% -100%, #042c54 25%, rgba(4, 44, 84, 1) 85%, rgba(27, 120, 222, 1) 100%);
+    background:radial-gradient(circle at 30% -100%, rgb(177, 24, 24) -1%, rgb(24, 4, 4) -50%,  rgb(0, 0, 0) 90%);
 
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
+.spc__about-img {
+
+    margin-top: 90px;
+    margin-left: 30px;
+    margin-right: 0px ;
+}
+
+img{
+     height:500px;
+
+}
+.spc__about {
+    display: flex;
+
+
+}
+
+.spc__about-img {
+    height: 200px;
+
+}
 .gpt3__whatgpt3-feature {
     display: flex;
 }
